# MorphoShellCMake

./: CMakeLists.txt  oldMakefile  settings_cone.txt
meshing_scripts/: cone.py  gauss-codazzi-mainardi.py  mesh_processing_module.py  snapping.py
settings/: cone_ansatz.txt  old.txt  snapping.txt
source_files/: advance_dynamics.cpp  calc_a_comps_and_b_comps_and_normals.cpp  calc_angle_deficits.cpp  calc_curvatures.cpp  calc_deformation_forces.cpp  calc_energies.cpp  calc_energy_densities.cpp  calc_non_deformation_forces.cpp  calc_strains.cpp  calc_stresses.cpp  do_dialling.cpp  get_real_time.cpp  impose_constraints.cpp  initialize_directories.cpp  is_at_equilibrium.cpp  main.cpp  read_settings.cpp  read_vtk_data.cpp
